FINISHED about me!

--- a/HTML.css
+++ b/HTML.css
@@ -17,3 +17,4 @@
 #three{height:100px;width:100px;border:2px solid black;font-size:22px;font-family:verdana;background-color:#3399CC;display:inline}
 #four{height:80px;width:100px;border:2px solid black;font-size:20px;font-family:verdana;background-color:#3399CC;display:inline}
 #div{margin:200px 200px 200px 200px;}
+#toe{
