--- a/Computer HardWare.css
+++ b/Computer HardWare.css
@@ -12,15 +12,22 @@
    border-radius:10px;
    font:black;
    float:top;
+    text-decoration:none;
+    
+}
+
+#navbar-link{color :black;
+    font:black
 }
 #one{height:80px;width:100px;border:2px solid black;font-size:22px;font-family:verdana;background-color:#3399CC;display:inline}
 #two{height:80px;width:100px;border:2px solid black;font-size:22px;font-family:verdana;background-color:#3399CC;display:inline}
 #three{height:100px;width:100px;border:2px solid black;font-size:22px;font-family:verdana;background-color:#3399CC;display:inline}
 #four{height:80px;width:100px;border:2px solid black;font-size:20px;font-family:verdana;background-color:#3399CC;display:inline}
 #div{margin:200px 200px 200px 200px;}
-h1{text-shadow: 2px 2px 2px #CC3300;}
-ol li{border:5px solid black;background-color:gray;margin:5px 5px 5px 5px;border-radius:10px;}
-li{border:5px solid black;background-color:gray;margin:5px 5px 5px 5px;border-radius:10px;}
-a:hover{color:red;  text-decoration:none;}
-a{color:black;text-decoration:none;}
+#h1{text-shadow: 2px 2px 2px #CC3300;font-size:24px;} 
 body{border:10px solid #5C5858;}
+a:hover{color:red;text-decoration:none;}
+p{font-size:20px;}
+a{color:black;text-decoration:none;}
+ul li{border:5px solid black;background-color:gray;margin:5px 5px 5px 5px;border-radius:10px;font-size:20px;}
+p{border:5px solid black;background-color:gray;margin:5px 5px 5px 5px;border-radius:10px;}
