--- a/index.css
+++ b/index.css
@@ -5,7 +5,8 @@
     width:600px;
     height:60px;
     border:5px solid black;
-    margin-right:500px;
+    margin-right:100px;
+    margin-top:20px;
     position:fixed;
    color:black;
    border-radius:10px;
@@ -18,7 +19,7 @@
 img{-webkit-animation: spin 3s infinite linear;
     animation: spin 3s infinite linear;margin-top:200px;}
     @-webkit-keyframes spin {
-    100% { -webkit-transform: rotate(180deg); }
+    100% { -webkit-transform: rotate(180deg);margin-left:1200px; }
 }
 @-moz-keyframes spin {
     100% { -moz-transform: rotate(180deg); }
@@ -35,3 +36,9 @@ img{-webkit-animation: spin 3s infinite linear;
 #three{height:100px;width:100px;border:2px solid black;font-size:22px;font-family:verdana;background-color:#3399CC;display:inline}
 #four{height:80px;width:100px;border:2px solid black;font-size:20px;font-family:verdana;background-color:#3399CC;display:inline}
 #div{margin:200px 200px 200px 200px;}
+#first{margin-top:200;}
+ol li{border:5px solid black;background-color:gray;margin:5px 5px 5px 5px;border-radius:10px;}
+#p{margin-bottom:10px;}
+a:hover{color:red;  text-decoration:none;}
+a{color:black;text-decoration:none;}
+body{border:10px solid #5C5858;}
